# ros2_ws

./: .gitignore  Dockerfile  Dockerfile.foxy.aarch  Dockerfile.foxy.x86  foxy.amd64.Dockerfile  foxy.arm64.Dockerfile
.github/workflows/: build_aarch_runner.yaml  build_arm64_runner.yaml  build_runner.yaml  build_x86_runner.yaml  generate_binary.yaml
src/clean_msgs/: CMakeLists.txt  package.xml
src/clean_msgs/action/: StartNavTask.action
src/clean_msgs/msg/: AIDetInfo.msg  AIDetections.msg  AutoDriveCmd.msg  AutoDriveModeSwitch.msg  ChassisStatus.msg  CleanModeInfo.msg  CleanModuleState.msg  CleaningDeviceCmd.msg  Critic.msg  DevModeConf.msg  DeviceControlRsp.msg  DeviceInfo.msg  FollowPathBuildStatus.msg  FusionObjectInfo.msg  FusionObjects.msg  MapDataUpdateInfo.msg  MapInfo.msg  PathInfo.msg  PointInfo.msg  RobotHeartBeat.msg  SemanticInfo.msg  SpecialZoneInfo.msg  SubTaskInfo.msg  SysBaseStatus.msg  TrackedObstacles.msg  VehicleStatus.msg  WirelessNetwork.msg
src/clean_msgs/msg/bm/: BCTaskStatus.msg  TaskReportStatus.msg  TaskRunStatus.msg  UIPointInfo.msg
src/clean_msgs/msg/hm/: ProcessMonitorInfo.msg  SystemMonitorInfo.msg
src/clean_msgs/srv/: BagRecord.srv  CleanMode.srv  DevelopMode.srv  DeviceControl.srv  DeviceLevel.srv  DeviceTimerPauseNotify.srv  DriveModeSwitch.srv  GetAgiBotVersion.srv  GetCleanModeInfo.srv  GetCollectWaterTime.srv  GetCurCleanMode.srv  NavCtrlCmd.srv  NetWorkConfig.srv  SemanticConfig.srv  SetCleanMode.srv  SlamInterface.srv  SoundConfig.srv  SoundPlay.srv  SpecialZoneCmd.srv
src/clean_msgs/srv/bm/: TaskReportGet.srv
src/clean_msgs/srv/bm/map/: MapConfigBuild.srv  MapPrepareSync.srv  MapPrepareTypeTransfer.srv  MapSyncFinishNotify.srv  MapTypeTransfer.srv
src/clean_msgs/srv/bm/path/: FollowPathBuild.srv  HandDrawPathSave.srv  PathDel.srv  PathGet.srv  PathList.srv  PathOpr.srv  PathUpdate.srv
src/clean_msgs/srv/bm/point/: PointCreate.srv  PointDel.srv  PointGet.srv  PointList.srv  PointUpdate.srv
src/clean_msgs/srv/bm/task/: ManualCleanCtrl.srv  RemoteCtrlCmd.srv  TaskCreate.srv  TaskDel.srv  TaskGet.srv  TaskList.srv  TaskRunOperation.srv  TaskRunStart.srv  TaskUpdate.srv
src/clean_msgs/srv/mapengine/: MapConfig.srv  MapLoad.srv
src/foxglove_bridge/: CMakeLists.txt  cmake_command.sh  package.xml
src/foxglove_bridge/foxglove_bridge_base/include/foxglove_bridge/: base64.hpp  callback_queue.hpp  common.hpp  foxglove_bridge.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  websocket_client.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
src/foxglove_bridge/foxglove_bridge_base/include/foxglove_bridge/test/: test_client.hpp
src/foxglove_bridge/foxglove_bridge_base/src/: base64.cpp  foxglove_bridge.cpp  parameter.cpp  serialization.cpp  server_factory.cpp  version.cpp.in
src/foxglove_bridge/foxglove_bridge_base/src/test/: test_client.cpp
src/foxglove_bridge/foxglove_bridge_base/tests/: base64_test.cpp  serialization_test.cpp  version_test.cpp
src/foxglove_bridge/ros2_foxglove_bridge/include/foxglove_bridge/: create_generic_publisher.hpp  create_generic_subscription.hpp  generic_client.hpp  generic_publisher.hpp  generic_subscription.hpp  param_utils.hpp  parameter_interface.hpp  ros2_foxglove_bridge.hpp  typesupport_helpers.hpp  utils.hpp
src/foxglove_bridge/ros2_foxglove_bridge/launch/: foxglove_bridge_launch.xml
src/foxglove_bridge/ros2_foxglove_bridge/src/: generic_client.cpp  generic_publisher.cpp  generic_subscription.cpp  message_definition_cache.cpp  param_utils.cpp  parameter_interface.cpp  ros2_foxglove_bridge.cpp  ros2_foxglove_bridge_node.cpp  typesupport_helpers.cpp
src/foxglove_bridge/ros2_foxglove_bridge/tests/: smoke_test.cpp
src/franka_demo/: CMakeLists.txt  package.xml
src/franka_demo/launch/: franka_demo_launch.xml
src/franka_demo/src/: franka_demo_node.cpp
src/franka_description/: CMakeLists.txt  package.xml
src/franka_description/launch/: visualize_franka.launch.py
src/franka_msgs/: CMakeLists.txt  package.xml
src/franka_msgs/msg/: FrankaRobotState.msg  GraspEpsilon.msg
